2022/kubehuddle-edinburgh/k8s/compliant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compliant
spec:
  selector:
    matchLabels:
      app: compliant
  template:
    metadata:
      labels:
        app: compliant
    spec:
      containers:
      - name: compliant
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        securityContext:
          runAsUser: 1
